[tool.poetry]
name = "cnapp-sanic"
version = "0.1.0"
description = "Cloud Native Applications using Sanic"
authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]
readme = "README.md"
license = "Apache License"
homepage = "https://github.com/cnapp/cnapp-sanic"
repository = "https://github.com/cnapp/cnapp-sanic"
documentation = "https://github.com/cnapp/cnapp-sanic"
keywords = ["cnapp", "python"]

[tool.poetry.dependencies]
python = "^3.6"
daiquiri = "^1.5"
uvicorn = "=0.3.32"
aiofiles = "^0.4.0"
fastapi = "^0.1.18"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
pytest-cov = "^2.6"
pytest-sugar = "^0.9.2"
tox = "^3.7"
black = "=18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
